file后面的目录必须是闭合的。否则会找不到文件，提示404错误

--- a/com.yzd.httpServer/src/main/resources/application.properties
+++ b/com.yzd.httpServer/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 #
 server.port=2222
+#注：file后面的目录必须是闭合的。否则会找不到文件，提示404错误
+# windows系统下的路径分隔符是\
+# linux系统下的路径分隔符是/
+# 目录是绝对路径
+cms.static.path=C:\\Users\\proc\\Documents\\com.yzd.cms-example\\CicadasCMS\\CicadasCms\\cmsstaticfile\\
 #
-cms.static.path=C:\Users\proc\Documents\com.yzd.cms-example\CicadasCMS\CicadasCms\cmsstaticfile
