--- a/com.yzd.httpServer/pom.xml
+++ b/com.yzd.httpServer/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.yzd</groupId>
     <artifactId>com.yzd.httpServer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -27,4 +27,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
