logback 日志配置，多环境日志配置

--- a/com.yzd.httpServer/src/main/resources/application.properties
+++ b/com.yzd.httpServer/src/main/resources/application.properties
@@ -5,4 +5,6 @@ server.port=2222
 # linux系统下的路径分隔符是/
 # 目录是绝对路径
 cms.static.path=C:\\Users\\proc\\Documents\\com.yzd.cms-example\\CicadasCMS\\CicadasCms\\cmsstaticfile\\
-#
+# 切换不同环境的配置信息
+# dev环境只控制台输出
+spring.profiles.active=dev
