简单的使用教程

--- a/CicadasCMS/CicadasCms/src/main/resources/application.properties
+++ b/CicadasCMS/CicadasCms/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Server
 app.name=@project.name@
-server.port = 80
+server.port = 2380
 
 #spring session
 spring.session.store-type=hash_map
@@ -18,9 +18,9 @@ spring.devtools.restart.enabled=true
 
 #datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.7:3307/finalcms?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://192.168.1.7:3306/finalcms?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=1qaz2wsx
 
 #druid
 spring.datasource.druid.initial-size= 1
