--- a/CicadasCMS/CicadasCms/pom.xml
+++ b/CicadasCMS/CicadasCms/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.zhiliao</groupId>
     <artifactId>CicadasCms</artifactId>
     <version>0.1</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>CicadasCms</name>
     <description>This an content manage system</description>
