设置登录信息的过期时间，默认为：60s;作用：解决会话超时问题

--- a/CicadasCMS/CicadasCms/src/main/resources/application.properties
+++ b/CicadasCMS/CicadasCms/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #Server
 app.name=@project.name@
 server.port = 2380
+#设置登录信息的过期时间，默认为：60s;作用：解决会话超时问题
+server.session.timeout=7200
 
 #spring session
 spring.session.store-type=hash_map
